--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,8 +16,6 @@ spring.jpa.properties.hibernate.format_sql = true
 #
 # Show JPA/Hibernate logging messages
 #
-#logging.level.org.hibernate.SQL=trace
-#logging.level.org.hibernate.orm.jdbc.bind=trace
-
-spring.profiles.active=prod
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
