--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,9 +3,9 @@ spring.application.name=restaurant-ordering-webapp
 #  JDBC properties
 #
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/restaurant_ordering?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://bangvan.c7imqwcqg3c4.ap-southeast-2.rds.amazonaws.com:3306/myrestaurant?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=5zm7aa8o
+spring.datasource.password=12monthsusage!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -16,8 +16,8 @@ spring.jpa.properties.hibernate.format_sql = true
 #
 # Show JPA/Hibernate logging messages
 #
-#logging.level.org.hibernate.SQL=trace
-#logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
-spring.profiles.active=prod
+server.port=5000
 
