--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,5 +19,5 @@ spring.jpa.properties.hibernate.format_sql = true
 logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-server.port=5000
+#server.port=5000
 
