--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
+        <!--swagger-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
     </dependencies>
 
